--- a/snprc_scheduler/src/client/styles/css/Accordion.style.css
+++ b/snprc_scheduler/src/client/styles/css/Accordion.style.css
@@ -2,7 +2,7 @@
 @import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css");
 @import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css");
 
-.bs-accordion {
+.scheduler-bs-accordion {
     /*width: 510px;*/
     margin-left: 17px;
 }
