--- a/snprc_scheduler/src/client/styles/css/Timeline.style.css
+++ b/snprc_scheduler/src/client/styles/css/Timeline.style.css
@@ -83,7 +83,7 @@
 .timeline-grid .react-grid-HeaderRow > div {
     height: 120px !important;
     /*background-image: linear-gradient(to bottom,#f5f5f5 0,#e8e8e8 100%);*/
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(240, 240, 240);
     overflow: hidden;
     width: 100% !important;
     margin-right: 500px;
@@ -91,7 +91,7 @@
 
 .timeline-grid .react-grid-Header > div {
     height: 120px !important;
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(240, 240, 240);
     /*background-image: linear-gradient(to bottom,#f5f5f5 0,#e8e8e8 100%);*/
     border: 0px;
     overflow: hidden;
@@ -108,11 +108,12 @@
     margin-top: 85px;
     border-top: 2px solid rgb(180, 180, 180) !important;
     padding-bottom: 140px !important;
-    background-color: #e8e8e8;
+    background-color: rgb(250, 250, 250);
 }
 
 .timeline-grid .react-grid-Canvas {
-    background-color: #e8e8e8 !important;
+    /*background-color: #e8e8e8 !important;*/
+    background-color: rgb(250, 250, 250) !important;
     overflow: auto !important;
 }
 
